fix main card in admin, sources and routes for catalog

--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -37,6 +37,9 @@
 
         .slick-slide {
             @include vnd.vendored(transition, 'all .5s ease');
+            .left, .right{
+                width: 0;
+            }
 
             &:hover {
                 scale: 101%;
