--- a/src/app/layout/footer/Footer.styles.scss
+++ b/src/app/layout/footer/Footer.styles.scss
@@ -62,6 +62,10 @@
         text-decoration: underline;
       }
     }
+
+    a{
+      color: c.$pure-white-color;
+    }
   }
 
   .socialIconContainer {
