--- a/src/features/MainPage/Heading/Heading.styles.scss
+++ b/src/features/MainPage/Heading/Heading.styles.scss
@@ -26,5 +26,6 @@
         text-decoration: underline;
         text-align: right;
         color: c.$text-red-color;
+        cursor: pointer;
     }
 }
