--- a/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
@@ -4,7 +4,7 @@
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 
 .searchResultsBlock{
-    @include mut.sized(100%, 418px);
+    width: 100%;
     overflow-y: scroll;
     @include mut.flexed($direction: column);
 }
