--- a/src/features/StreetcodePage/SourcesBlock/SourceItem/SourceItem.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/SourceItem/SourceItem.styles.scss
@@ -7,7 +7,8 @@ $articlesImg: "@assets/images/sources/Articles.png";
   @include mut.sizedImportant(380px, 250px);
   @include mut.full-rounded(30px);
   box-shadow: 4px 4px 4px rgba(0, 0, 0, .25);
-
+  display: flex;
+  gap: 10px;
   @include mut.flex-centered();
   @include mut.bg-image($articlesImg);
 
