--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryBlock.styles.scss
@@ -4,6 +4,9 @@
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
+.artGalleryContainer .blockHeadingWrapper{
+    margin-bottom: pxToRem(10px);
+}
 
 .artGallerySliderContainer .sliderClass .slick-slider {
     width: 100%;
@@ -18,8 +21,6 @@
     @include wr.main-page-block-wrapper();
 
     .artGalleryContainer {
-        @include mut.rem-margined($top: 30px);
-
         .artGalleryContentContainer {
             @include mut.flex-centered();
         }
