--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -4,6 +4,9 @@
 
 $bgImg: '@assets/images/streetcode-card/background.png';
 
+.container{
+    margin-top: f.pxToRem(110px);
+}
 .streetcodeContainer {
     width: 100%;
     overflow: clip;
