fix wow facts slider

--- a/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
+++ b/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
@@ -21,6 +21,10 @@
   .scrollToTopBtnContainer{
     @include mut.positioned-as(relative, $right: 10px);
     @include mut.circular(50px);
+
+    svg{
+      transform: scale(0.8);
+    }
   }
 }
 .scrollToTopBtnContainer.active{
