--- a/src/features/StreetcodePage/QRBlock/QRMobile/QRMobile.styles.scss
+++ b/src/features/StreetcodePage/QRBlock/QRMobile/QRMobile.styles.scss
@@ -37,6 +37,7 @@ $loadImg: '@assets/images/qr-block/must_be_gif.png';
         margin-top: pxToRem(20px);
         width: pxToRem(340px);
         height: pxToRem(46px);
+        border-radius: 10px;
     }
 }
 
