--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -24,7 +24,7 @@
 
     .ant-modal-close {
       @include mut.positioned-as(absolute, $left: 94%, $top: -27px);
-      @include mut.circular(90px, c.$pure-white-color);
+      @include mut.circular(80px, c.$pure-white-color);
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
       &:hover {
@@ -110,7 +110,7 @@
 
     > * {
       @include mut.sized(212px, inherit);
-      @include mut.full-rounded(11px);
+      @include mut.full-rounded(15px);
       @include mut.flex-centered();
 
       border-radius: 15px !important;
@@ -183,10 +183,11 @@
 
   .donatesDonateBtn {
     @include mut.sized(212px, 73px);
-    @include mut.full-rounded(11px);
+    @include mut.full-rounded(15px);
     background-color: c.$accented-red-color;
     box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
     border-radius: f.pxToRem(15px) !important;
+    border: none;
 
     &:disabled{
       background-color: c.$lighter-gray-color;
@@ -289,6 +290,7 @@
 
       .donatesDonateBtn {
         @include mut.sized(100%, 46px);
+        @include mut.full-rounded(10px);
 
         > span{
           @include mut.with-font(ft.$roboto-font, $font-size: 14px, $font-weight: 500);
