--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtnCircle/PartnersBtnCircle.styles.scss
@@ -40,6 +40,10 @@
         .partnersBtnCircle{
           @include mut.circular(50px);
           filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.18));
+          
+          svg{
+            transform: scale(0.8);
+          }
         }
         .partnersBtnText{
             display: none;
