--- a/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
@@ -15,6 +15,7 @@
     line-height: f.pxToRem(26px);
     font-style: italic;
     display: flex;
+    justify-content:flex-end;
 
     p {
         font-family: 'Closer Text' !important;
