--- a/src/features/AdminPage/ForFansPage/ForFansPage/ForFansPage.style.scss
+++ b/src/features/AdminPage/ForFansPage/ForFansPage/ForFansPage.style.scss
@@ -43,56 +43,57 @@ $articlesImg: "@assets/images/sources/Articles.png";
       background-color: c.$dark-red-color;
   }
 }
-
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-}
-
-.modal form {
-  display: flex;
-  flex-direction: column;
-}
-
-.modal label {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.modal input {
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  border: none;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
-}
-
-.modal button {
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
-  background-color: #3f51b5;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-.modal button:hover {
-  background-color: #303f9f;
-}
-
-.modal button:focus {
-  outline: none;
-}
-
-.modal button:last-child {
-  margin-left: 10px;
+.forFansPage{
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+  }
+  
+  .modal form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .modal label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .modal input {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+  }
+  
+  .modal button {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #3f51b5;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+  
+  .modal button:hover {
+    background-color: #303f9f;
+  }
+  
+  .modal button:focus {
+    outline: none;
+  }
+  
+  .modal button:last-child {
+    margin-left: 10px;
+  }
 }
