--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -41,6 +41,10 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     .sticky{
         bottom: f.pxToRem(25px);
     }
+
+    .container{
+        margin-top: f.pxToRem(44px);
+    }
 }
 
 @media screen and (max-width: 680px) {
