--- a/src/features/MainPage/TeamSlider/TeamItemSlider/TeamItemSlider.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamItemSlider/TeamItemSlider.styles.scss
@@ -12,20 +12,9 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
         background-color: #FFFFFF;
+        margin-left: 20px;
 
-        .slick-initialized .slick-slide {
-            @include mut.flexed(row, center, center, wrap);
-            @include mut.rem-margined($top: 0px, $right: 0px, $bottom: 10px, $left: 0px);
-        }
 
-        .slick-track {
-            margin: 0;
-        }
-
-        .slick-initialized .slick-slide {
-            @include mut.flexed($justify-content: center, $gap: 0px);
-            @include mut.rem-margined($top: 20px, $right: 0px, $bottom: 10px, $left: 0px);
-        }
     }
 
     .leftSlider {
@@ -59,6 +48,7 @@
     .teamLinkItems {
         position: absolute;
         bottom: 33.5px;
+        display: flex;
 
         .teamLinkItem {
             @include mut.rem-margined(0px, 17px, 0px, 0px);
