--- a/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
+++ b/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
@@ -7,8 +7,8 @@
 .mainPageBlockStaticBanner {
     // @include mut.sized($width: 90%);
     min-height: f.pxToRem(225px);
-
-    @include mut.flexed();
+    max-height: f.pxToRem(312px);
+    @include mut.flexed($justify-content: space-between);
 
     margin: f.pxToRem(50px) f.pxToRem(20px);
     padding: 0 f.pxToRem(46.5px);
@@ -16,20 +16,22 @@
     @include mut.full-rounded(50px);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
-    svg {
-        margin: f.pxToRem(46px) 0 f.pxToRem(48px) 0;
-    }
-
     .mainContainer {
-        @include mut.flexed($align-items: center);
-        margin: 0 3rem;
+        @include mut.flexed($align-items: flex-end, $justify-content: space-between);
+        margin: 0 3rem f.pxToRem(72px);
+
         .textContainer {
+            @include mut.sized($width: 872px);
+
             p.title {
                 @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 36px);
+                line-height: 42.19px;
+                @include mut.rem-margined($bottom: 30px);
             }
 
             p.content {
                 @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 400, $font-size: 24px);
+                line-height: 28.13px;
             }
         }
 
@@ -37,12 +39,17 @@
             @include mut.sized($width: 267px, $height: 73px);
             @include mut.full-rounded(14px);
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
-
-            // display: flex;
-            text-align: center;
+            @include mut.rem-margined($left: 60px);
             padding: f.pxToRem(25px) 0;
+
+            text-align: center;
+            cursor: pointer;
             background-color: c.$accented-red-color;
             color: c.$pure-white-color;
+
+            &:hover {
+                background-color: c.$dark-red-color;
+            }
         }
     }
 }
