--- a/src/features/StreetcodePage/MainBlock/BreadCrumb/BreadCrumb.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/BreadCrumb/BreadCrumb.styles.scss
@@ -23,7 +23,7 @@
   margin-inline: 5px !important;
 }
 
-.ant-breadcrumb a {
+.ant-breadcrumb a, .ant-breadcrumb-link {
   color: c.$dark-red-color;
 }
 
