--- a/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
+++ b/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
@@ -5,13 +5,10 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .mainPageBlockStaticBanner {
-    // @include mut.sized($width: 90%);
-    min-height: f.pxToRem(225px);
-    max-height: f.pxToRem(312px);
     @include mut.flexed($justify-content: space-between);
-
     margin: f.pxToRem(50px) f.pxToRem(20px);
     padding: 0 f.pxToRem(46.5px);
+
     background-color: c.$pure-white-color;
     @include mut.full-rounded(50px);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -25,7 +22,6 @@
 
             p.title {
                 @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 36px);
-                line-height: 42.19px;
                 @include mut.rem-margined($bottom: 30px);
             }
 
@@ -51,5 +47,24 @@
                 background-color: c.$dark-red-color;
             }
         }
+    }
+
+    &.catalog {
+        height: f.pxToRem(225px);
+
+        .mainContainer {
+            margin: f.pxToRem(47px) 3rem;
+
+            .textContainer {
+                p.title {
+                    @include mut.rem-margined($bottom: 20px);
+                    height: 30px;
+                }
+            }
+        }
+    }
+
+    &.support {
+        height: f.pxToRem(312px);
     }
 }
