--- a/src/features/AdditionalPages/ContactUsPage/ContactUs.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/ContactUs.styles.scss
@@ -5,7 +5,7 @@
 .contactUsContainer{
     position: relative;
 
-    height: 100%;
+    min-height: 100vh;
     width: 100vw;
 
     background-color: c.$accented-grayish-gray-color;
@@ -28,6 +28,14 @@
 
         .titleBlock{
             margin-bottom: f.pxToRem(80px);    
+        }
+    } 
+}
+
+@media screen and (max-width: 480px) {
+    .contactUsContainer{
+        .contactUsCover{
+            padding-bottom: f.pxToRem(24px);
         }
     } 
 }
