--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -13,6 +13,9 @@ $loadImg: '@assets/images/catalog/loading.gif';
     background-color: c.$accented-low-opasity-grayish-gray-color;
     width: 100%;
 
+    height: 100%;
+    min-height: 100vh;
+
     .streetcodeCatalogHeading {
         @include mut.with-font('Closer Text', 500, 96px, normal);
         padding-bottom: pxToRem(40px);
