--- a/src/features/StreetcodePage/QRBlock/QR.styles.scss
+++ b/src/features/StreetcodePage/QRBlock/QR.styles.scss
@@ -55,10 +55,19 @@ $QRBgImg: "/src/assets/images/qr-block/QRbackground.png";
     img {
         @include mut.rem-margined(36px, 0, 0, 14px);
     }
-}
-
-.QRBlockTextContainer {
-    @include mut.sized(405px, 491px);
+    .QRBlockTextContainer {
+        @include mut.sized(405px, 491px);
+        .ant-qrcode{
+            @include mut.rem-margined(36px, 0, 0, 14px);
+            background-color: rgba($color: #000000, $alpha: 0);
+            border-width: 0;
+            @include mut.sizedImportant(217px, 217px);
+            canvas{
+                @include mut.sizedImportant(217px, 217px);
+            }
+            
+        }
+    }
 }
 
 @media (max-width: 1024px) {
