--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -22,8 +22,21 @@
     color: c.$darkish-gray-color;
   }
 
-  > .donateInputContainerWrapper {
-    @include mut.flexed($justify-content: center); 
+   .donateInputContainerWrapper{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      border-bottom: 3px solid c.$darkish-gray-color;
+      transform: translateY(-40px);
+    }
+    &.active::before {
+      content: none;
+    }
   }
 
   .amountInput {
@@ -35,10 +48,6 @@
     border: none;
     padding: 0;
     overflow: visible;
-
-    &:not(.active) {     
-      text-decoration: underline;
-    }
 
     &.active {
       color: c.$pure-black-color;
@@ -179,6 +188,12 @@
       line-height: 15px;
     }
 
+    .donateInputContainerWrapper{
+      &::before {
+        transform: translateY(-24px);
+      }
+    }
+    
     .amountInput {
       @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
       @include mut.rem-margined($bottom: 20px);
@@ -187,12 +202,6 @@
       align-items: center;
       height: 42px;
       max-width: 100%;
-
-      &:not(.active) {     
-        text-decoration-line: underline;  
-        text-decoration-thickness: 2px;
-        text-underline-offset: 2px;
-      }
     }
 
     .donatesBtnContainer {
