--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -127,5 +127,8 @@
 @media screen and (max-width: 1024px) {
     .relatedFigureSlide {
         @include mut.sized($width: 165px, $height: 165px);
+        .sliderClass .slider-item-container {
+            display: block !important;
+        }
     }
 }
