--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -1,86 +1,110 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/variables/_variables.fonts.scss" as ft;
+@use "@sass/_utils.functions.scss" as f;
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
-@use "@sass/variables/_variables.fonts.scss" as f;
 
-.catalogItem {
-    @include mut.sized($width: 278px, $height: 380px);
-    @include mut.full-rounded($rad: 30px);
-    border: 3px solid c.$pure-white-color;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    
-    @include mut.flexed($justify-content: center, $align-items: flex-end);
-    cursor: pointer;
 
-    &:hover {
-      @include mut.positioned-as();
-      @include vnd.vendored(transition, 'all .5s ease');
-      overflow: visible !important;
-    } 
-}
+.mainPageStreetCodeSlider {
+  
 
-.catalogItemText {
-    @include mut.sized($width: 278px, $height: 97px);
-    @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
+    .itemStreetCodeMainPage {
+        @include mut.flexed(row, center, center, wrap);
+        @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
+        @include mut.sized(758px, 400px);
+        @include mut.full-rounded(50px);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        line-height: f.pxToRem(23px);
+        background-color: #FFFFFF;
+        margin-left: 20px;
+    }
 
-    background-color: c.$dark-red-color;
+    .leftSlider {
+        @include mut.full-rounded(53px);
+        @include mut.sized(294px, 398px);
+        flex: 0 0 f.pxToRem(294px);
+        background-color: #FFFFFF;
+        justify-self: flex-start;
+    }
 
-    @include vnd.vendored(transition, 'all .5s ease');
+    .leftSliderContent {
+        background-color: c.$accented-gray-color;
+        @include mut.border(c.$pure-white-color,22px,solid);
+        @include mut.full-rounded(50px);
+        @include mut.parent-sized();
+        @include mut.flex-centered();
+    }
 
-    .heading {
-        @include mut.sized($width: 100%, $height: 88px);
+    .rightSlider {
+        box-sizing: border-box;
+        @include mut.flexed(column, start, start, nowrap);
+        justify-self: flex-end;
+        align-self: flex-start;
+        width: min-content;
+        height: f.pxToRem(360px);
+        flex: 1 1 auto;
+        position: relative;
+    }
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    .streetcodeLink {
+      @include mut.truncated($line-num: 1);
+      @include mut.with-font($font-weight: bolder);
+      position: absolute;
+      bottom: 1px;
+      display: flex;
+      color: c.$dark-red-color;
 
-        .aliasText {
-          @include mut.rem-padded($left: 5px, $right: 5px, $top: 5px, $bottom: 5px);
-          line-height: pxToRem(16.4px);
-          font-size: 12px;
-        }
+      &:hover {
+          text-decoration: underline;
+      }
+  }
 
-        p {
-          @include mut.truncated($line-num: 2);
-          @include mut.rem-padded($left: 12px, $right: 12px, $top: 10px);
+    .streercodeTitle {
+        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
+        
+        color: #1D1F23;
+        line-height: f.pxToRem(40px);
+    }
 
-          @include mut.with-font($font-family: f.$closer-text-font, $font-weight: 500);
-          text-align: center;
-          color: c.$pure-white-color;
+    .streetcodeMainPageContainer {
+        box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+        @include mut.flexed(column, start, space-between, nowrap);
+        @include mut.rem-padded(28px, 0px, 0px, 0px);
+    }
+
+    .streetcodeMainPageText {
+      @include mut.rem-padded($top: 7px, $right: 0px, $bottom: 14px, $left: 0px);
+      color: c.$dark-red-color;
+      line-height: f.pxToRem(18px);
+  }
+  
+    .streetcodeTeaser {
+        width: 100%;
+        @include mut.rem-margined(12px, 3px, 0px, 0px);
+        @include mut.rem-padded(0px, 5px, 0px, 0px);
+        line-height: 23px;
+        max-height: f.pxToRem(214px);
+        overflow: auto;
+        color: #1D1F23;
+        @include mut.with-font($font-weight: 300, $font-size: 20px);
+
+        &::-webkit-scrollbar {
+            display: none;
         }
     }
 
-    &.mobile {
-        @include mut.sized($width: 165px, $height: 65px);
-        background-color: transparent !important;
-        line-height: pxToRem(18.48px);
-        color: c.$pure-black-color;
-
-        .heading {
-            display: inline;
-            height: 100%;
-
-            p {
-              font-size: 14px;
-              color: c.$pure-black-color;
-              padding-top: pxToRem(9px) !important;
-            }
-
-            .aliasText {
-              line-height: pxToRem(13.2px);
-              font-size: 10px;
-              padding-top: pxToRem(0px) !important;
-            }
-        }
+    .streetcodeAlias {
+        color: #6D6D6D;
+        @include mut.rem-margined(9px, 0px, 0px, 0px);
+        @include mut.with-font($font-weight: 500, $font-size: 20px);
     }
-}
 
-@media screen and (max-width: 1024px) {
-    .catalogItem {
-      @include mut.sized($width: 165px, $height: 165px);
-      border-radius: pxToRem(30px);
+
+    .StreetcodeMainPageImg {
+        margin: auto;
+        @include mut.sized(225px, 307px);
     }
 }
