--- a/src/features/AdditionalPages/NewsPage/News.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/News.styles.scss
@@ -3,11 +3,11 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 
-.partnersContainer{
+.newsContainer{
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100%;
-    padding: f.pxToRem(112px) f.pxToRem(200px) f.pxToRem(110px) f.pxToRem(200px);
+    padding: f.pxToRem(150px) f.pxToRem(200px) f.pxToRem(100px) f.pxToRem(200px);
     background: #F5F5F5;
     // @include mut.bg-image('@assets/images/partners/background.png');
     // background-attachment: fixed;
@@ -18,26 +18,89 @@
         margin: 0 auto;
         display: block;
 
-        .h1{
-            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
-            margin: 40px !important ;
-            width: 10px !important;
+        .NewsHeader{
+            margin-bottom: 40px !important ;
+            //width: 10px !important;
+            h1{
+                @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 40px); 
+            }
         }
     }
     
     .newsTextArea{
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
-    }
-    .subTitle{
-        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
-        line-height: 26px;
-        color:  #1D1F23; 
+        
+        p{
+            padding-bottom: 24px;
+        }
     }
 
-    .subTitle.titleBottom{
-        white-space: nowrap;
-        margin-bottom: f.pxToRem(30px);
+    .newsImage{
+        padding-bottom: 24px;
+        height: 100%;
+        width: 100%;
+        //padding-bottom: 24px;
     }
+
+    .newsWithImageWrapper{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .newsLinks{
+        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
+        line-height: 14px;
+        padding-top: 24px;
+        text-align: right;
+        text-decoration: underline;
+        //text-transform: uppercase;   
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .newsLinks .Link{
+        color: #891F16 !important;
+    }
+    .randomNewsBlock{
+        margin-top: 40px;
+        //box-shadow: #1D1F23;
+        box-shadow: 0px 7px 17px 2px rgba(91, 91, 91, 0.25);
+        border-radius: 20px;
+        .randomNewsLink{
+            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
+            padding: 40px;
+
+            .additionalNewsText{
+                padding-bottom: 16px;
+            }
+
+            .randomNewsTitleAndButtn{
+                color: #1d1f23;
+                font-size: 32px;
+                font-weight: 500;
+                font-family: Closer Text, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+                    'Liberation Sans', sans-serif;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                
+                .newsButtonContainer{
+                    @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px); 
+                    padding: 25px 93px;
+                    background: #E04031;
+                    border-radius: 14px;
+                    max-height: 73px;
+                    button{
+                        color: #FFFFFF !important; 
+                    }
+                    
+                }
+            }
+        }
+    }
+    
     .buttonsBlock{
         @include mut.flexed($justify-content: center, $gap: 20px);
 
@@ -52,7 +115,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .partnersContainer{
+    .newsContainer{
         .subTitle.titleBottom{
             white-space: normal;
         }
@@ -60,12 +123,28 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .partnersContainer{
+    .newsContainer{
         background-color: c.$partners-mobile-background-color;
         background-image: none;
+        padding-left: 10px;
+        padding-right: 10px;
         padding-bottom:  f.pxToRem(20px);
         padding-top: f.pxToRem(94px);
 
+        .wrapper{
+
+            .NewsHeader{
+                margin-bottom: 24px !important;
+                h1{
+                    @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px); 
+                }
+            }
+        }
+
+        .newsTextArea{
+            @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 14px);
+        }
+        
         .buttonsBlock{
             @include mut.flexed($justify-content: center, $gap: 12px);
         }
@@ -77,7 +156,18 @@
 }
 
 @media screen and (max-width: 670px) {
-    .partnersContainer{
+    .newsContainer{
+
+        .wrapper{
+
+            .NewsHeader{
+                
+                h1{
+                    @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px); 
+                }
+            }
+        }
+
         .buttonsBlock{
             .button-sized{
                 @include mut.full-rounded(10px);
