--- a/src/features/AdditionalPages/NewsPage/Title/Title.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/Title/Title.styles.scss
@@ -1,34 +1,35 @@
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 @use "@assets/sass/_utils.functions.scss" as f;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
+@use "@assets/sass/variables/_variables.colors.scss" as c;
 
-.partnersContainer{
-    .titleContainer{
+.partnersContainer {
+    .titleContainer {
         margin-bottom: f.pxToRem(24px);
     
-        .titleSmall{
+        .titleSmall {
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 12px);
             line-height: 14px;
-            color: #891F16;
+            color: c.$dark-red-color;
             text-align: right;
             text-transform: uppercase;      
         }
     
-        .titleBig{
+        .titleBig {
             @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 96px);
             line-height: 127px;
-            color: #F4F4F4;
+            color: c.$accented-gray-color;
         }
         
-        .content{
+        .content {
             position: relative;
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
             line-height: 23px;
-            color: #1D1F23;
+            color: c.$lighter-black-color;
             margin: f.pxToRem(40px) 0 f.pxToRem(16px) 0; 
             z-index: 1;
 
-            .logo{
+            .logo {
                 position: absolute;
                 top:  f.pxToRem(-150px);
                 right:  f.pxToRem(70px);
@@ -39,18 +40,20 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .partnersContainer{
-        .titleContainer{
-            .titleBig{
+    .partnersContainer {
+
+        .titleContainer {
+
+            .titleBig {
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 54px);
                 line-height: 71px;
             }
 
-            .content{
+            .content {
                 @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 16px);
                 line-height: 21px;
                 
-                .logo{
+                .logo {
                     transform: scale(0.5);
                 }
             } 
@@ -59,9 +62,11 @@
 }
 
 @media screen and (max-width: 680px) {
-    .partnersContainer{
-        .titleContainer{
-            .content .logo{
+    .partnersContainer {
+
+        .titleContainer {
+
+            .content .logo {
                 top:  f.pxToRem(-50px);
                 right:  f.pxToRem(-80px);
             }
