--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -71,8 +71,8 @@ li.slick-active button:before {
     
         .right{
             position: absolute;
-            width: 180px;
-            height: 35%;
+            width: 35%;
+            height: 100%;
             right: 0;
             opacity: 0;
         }
